[gd_scene load_steps=2 format=3 uid="uid://en7rojdy5ip1"]

[ext_resource type="Script" path="res://scripts/audio_stream_player_2d_delay/audio_stream_player_2d_delay.gd" id="1_p0ae5"]

[node name="AudioStreamPlayer2DDelay" type="AudioStreamPlayer2D"]
max_distance = 300.0
bus = &"Sound Effects"
script = ExtResource("1_p0ae5")

[node name="PlayBuffer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="PlayBuffer" to="." method="_on_play_buffer_timeout"]
